--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "typescript": "^4.7.4",
     "vite-plugin-eslint": "^1.7.0",
     "vite-plugin-stylelint": "^3.0.4"
+  },
+  "dependencies": {
+    "qs": "^6.11.0"
   }
 }
